# hosting-utilities-py

./: .example.env  .gitconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
hosting_utilities/: __init__.py  __main__.py  backup_site.py  cli.py  cli_utils.py  op_utils.py
hosting_utilities/constants/: cli_arguments.py
hosting_utilities/models/: cli_argument_options.py  op_host_fields.py
scripts/: run_command_with_prompt.py
tests/: __init__.py
